# pico-playground

./: .gitignore  LICENSE  README.md
PicoFreeRTOS/: CMakeLists.txt  PicoFreeRTOS.sln  PicoFreeRTOS.vgdbproj  PicoSDKConfig.cmake
PicoFreeRTOS/Basic/: CMakeLists.txt  main.c  push.c
PicoFreeRTOS/Code/: CMakeLists.txt  main.c
PicoFreeRTOS/Push/: CMakeLists.txt
PicoFreeRTOS/RTOS/: CMakeLists.txt  blink.c  ping.c
PicoFreeRTOS/WiFi/: CMakeLists.txt  blink.c  scan.c
